// Copyright (c) 2021 Huawei Device Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option optimize_for = LITE_RUNTIME;

message HiperfCallPluginConfig {
    int32 pid = 1;          // pid of app.
    string app_name = 2;    // app name.
    string outfile = 4;     // the name of the output target file.

    uint32 frequency = 3;   // Set the counts of dumpping records per second, default 1000.
    bool is_trace = 5;      // Set if using --trace-offcpu, default true.
    bool is_root = 6;       // Set if using root privilege, default true.
    bool is_emulator = 7;   // Set if the device is emulator, default false.
}